ChangeLog of MCPP and its accompanying Validation Suite

2007/09/24  kmatsui
        * V.2.7-prerelease
        * Created macro notification mode, implemented -K option and '#
        pragma MCPP debug macro_call' sub-directive to enable this mode
        on STD mode.  Created get_src_location(), print_macro_inf(),
        print_macro_arg(), close_macro_inf(), chk_magic_balance(),
        remove_magics(), update_addr(), some MAC_* macros to define
        magic characters, struct LINE_COL.  Revised many functions.
        (Specifications by Taras Glek, implemented mostly by kmatsui and
        partly by Taras Glek).  (internal.H, main.c, directive.c, expand.
        c, support.c, system.c)
        * Created -k option to keep horizontal white spaces as they are
        and convert comment to spaces of the same length on STD mode.
        (Specs by Taras Glek, implemented by kmatsui).  (internal,H,
        main.c, directive.c, mbchar.c, support.c)
        * Implemented GCC2-spec variadic macro on STD mode in GCC-
        specific-build.  (by Taras Glek and kmatsui).  (directive.c)
        * Enabled GCC-like buggy handling of macro containing 'defined'
        token in #if directive on GCC-specific-build.  (by Taras Glek).
        (expand.c)
        * Reordered initialization steps and enabled undefining of not-
        Standard-required predefined macros.  Created undef_macros().
        Removed undef_a_predef().  (main.c, system.c)
        * Enabled non-conforming predefined macros such as 'linux' by
        default on GCC-specific-build for compatibility with GCC.
        Removed undef_gcc_macros().  Created DEF_NOARGS_* macros for
        diagnostics sake.  (internal.H, system.c)
        * Fixed a bug of file searching failure when a file is specified
        by relative path in -include option.  (system.c)
        * Fixed a bug of mcpplib initialization which caused problem on
        CygWIN.  (main.c, system.c, lib.c)